[gd_scene load_steps=2 format=3 uid="uid://dsjtin48yt5a5"]

[ext_resource type="Script" uid="uid://l5qyhhqv26u2" path="res://scripts/Lita/UI/visual.gd" id="1_81dko"]

[node name="Visual" type="VBoxContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.0
offset_top = -31.0
offset_right = 25.0
offset_bottom = 31.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1
script = ExtResource("1_81dko")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="PanelContainer"]
centered = false

[node name="Label" type="Label" parent="."]
layout_mode = 2
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="reversableButton" type="Button" parent="."]
visible = false
layout_mode = 2
text = "Flip"

[node name="Button" type="Button" parent="."]
layout_mode = 2
text = "Close"

[node name="Fullscreen Image" type="Sprite2D" parent="."]
visible = false
position = Vector2(-695, -512)
centered = false

[node name="Label" type="Label" parent="Fullscreen Image"]
offset_left = 1.0
offset_top = 1067.0
offset_right = 118.0
offset_bottom = 1083.0
text = "Press x to close"

[connection signal="pressed" from="reversableButton" to="." method="_on_flip"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
